social/core/static/core/base.css
body {
    margin: 0em;
}

header {
    display: flex;
    align-items: stretch;
    justify-content: space-evenly;
    gap: 1em; 
    padding: 1em;
}

header > form {
    flex-grow: 1;
    display: flex;
    height: 3rem;
}

header .searchbox {
    flex-grow: 1;
    height: 100%;
    padding: 0em 1em;
    border: 1px solid rgb(148, 148, 148);
    border-radius: 5px;
    background-color: rgb(246, 246, 246);
    font-size: 15px;
}

header a {
    align-items: center;
    display: flex;
}

header .logo {
    height: 2em;
    width: auto;
}

